style.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Inter', sans-serif;
    min-height: 100vh;
    padding: 0;
    margin: 0;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    position: relative;
}

.scroll-bar {
    height: 0.5%;
    position: fixed;
    top: 0;
    z-index: 2;
    background-color: #b0c4d9;
    width: 100%;
    scale: 0 1;
    transform-origin: left;
    animation: scroll-progress linear;
    animation-timeline: scroll();
}

@keyframes scroll-progress {
    to {scale: 1 1;}
}

.taskbar {
    list-style-type: none;
    /* width: 100vw; */
    min-width: 100%;
    padding-top: 0;
    margin: 0px 0px;
    min-height: 7vh;
    position: fixed;
    display: flex;
    /* Make taskbar overlap everything */
    z-index: 1;

    /* background-color: lightgray; */
}

.taskbar .links {
    margin-left: auto;
    position: fixed;
    top: 2vh;
    right: 5vw;
    text-align: right;

}

.taskbar li {
    display: inline;    
}

.taskbar li a {
    text-decoration: none;
    font-size: 20px;
    color: black;
    margin-right: 2px;
}

.taskbar .name {
    position: absolute;
    top: 2vh;
    left: 5vw;
    text-align: left;

    /* border: 1px solid orange; */
}

.taskbar .name a{
    font-size: 20px;
    color: black;
    margin-left: 10px;
    font-weight: bold;
}

@keyframes appear {
    from {opacity: 0;}
    to {opacity: 1;}
}

@keyframes LTR {
    from {margin-left: 0vw;}
    to {margin-left: 25vw;}
}

.page1 {
    position: sticky;
    top: 0;
}

.intro-container {
    display: flex;
    flex-direction: row;
    position: relative;
    top: 25vh;
    min-width: 30vw;
    max-width: 50vw;
    height: 50vh;   
    margin-left: 25vw;
    justify-content: center;
    align-items: center;
    animation: 2.5s appear, 1.5s LTR;
}

.intro-container .bio-container {
    position: relative;
    width: 37%;
    margin-bottom: 5%;
}

.intro-container h1 {
    font-size: 70px;
    margin-top: 10%;
    margin-bottom: 0px;
}

.intro-container h3 {
    font-size: 25px;
    margin-top: 0;
    margin-bottom: 0;
}

.intro-container p {
    margin-top: 10px;
}

.intro-container .picture {
    position: relative;
    height: 100%;
    width: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.intro-container img {
    min-width: 80%;
    height: 90%;
    border-radius: 50%;
}

.project-container {
    position: sticky;
    top: 0;
    background: linear-gradient(to right, #396afc, #2948ff);
    margin-top: 50vh;
    margin-bottom: 50px;
    padding: 0;
    width: 100vw;
    max-width: 100%;
    height: 100vh;
    max-height: 100%;
    justify-content: center;
    align-items: center;
    /* left: 5vw; */
}

/* #project-section {
    padding-top: 6.5vh;
} */

.project-container .section-title {
    color: white;
    padding-top: 1%;
    display: flex;
    flex-direction: column;
    position: relative;
    justify-content: center;
    align-items: center;
    min-width: 100%;
    top: 100;
    height: 10vh;
    font-size: 22px;
    opacity: 0;
    transition: 750ms;
    transform: translateX(25vw);
    line-height: 0.2;
    margin-bottom: 2%;
}

.project-container .section-title p {
    margin-top: 0;
    font-size: 15px;
}

.project-container .section-title.show {
    transform: translateX(0vw);
    opacity: 1;
}

@keyframes fade-in {
    to {scale: 1; opacity: 1;}
}

.project-container .example-container {
    position: relative;
    display: grid;
    grid-template-columns: repeat(2, 40%);
    height: 76vh;
    margin-top: 15px;
    justify-content: center;
    row-gap: 20px;
    column-gap: 25px;
}

.example-container img {
    max-width: 100%;
    height: 100%;
}

.project-container .word-game,
.project-container .casino-sim,
.project-container .hackathon,
.project-container .hangman {
    display: flex;
    position: relative;
    scale: .8; opacity: 0;
    animation: fade-in linear forwards;
    animation-timeline: view();
    animation-range: cover;
    animation-range-end: 350px;
}

.project-container .word-game,
.project-container .hackathon {
    flex-direction: row-reverse;
}

.project-container .casino-sim,
.project-container .hangman {
    flex-direction: row;
}

.word-game .word-picture,
.hackathon .hackathon-picture,
.casino-sim .casino-picture, 
.hangman .hangman-picture {
    width: 550px;
    height: 350px;
    height: 100%;
}

.word-game .word-info,
.hackathon .hackathon-info,
.casino-sim .casino-info,
.hangman .hangman-info {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: lightgray;
    min-width: 10%;
    max-width: 25%;
    height: 100%;
    align-self: center;
    margin: 0;
    padding: 0 15px;
}

.example-container img {
    transition-duration: 0.5s; 
    transform: scale(1);
}

.example-container img:hover {
    transition-duration: 0.5s;
    transform: scale(1.1);
}

.page3 {
    position: sticky;
    top: 0;
    display: flex;
    background-color: white;
    height: 100vh;
    margin: 0;
    padding: 0;
}

.page3 .section-title {
    padding-top: 1%;
    display: flex;
    flex-direction: column;
    position: relative;
    justify-content: center;
    align-items: center;
    min-width: 100%;
    top: 100;
    height: 10vh;
    font-size: 22px;
    opacity: 0;
    transition: 750ms;
    transform: translateX(-25vw);
    line-height: 0.2;
}

.page3 .section-title p {
    margin-top: 0;
    font-size: 15px;
}

.page3 .section-title.show {
    transform: translateX(0vw);
    opacity: 1;
}

.card-container {
    position: absolute;
    display: flex;
    width: 75vw;
    max-width: 100%;
    height: 50vh;
    gap: 4%;
    margin-left: 12.5vw;
    align-self: center;
}

#card1, #card2, #card3, #card4 {
    width: 100%;
    height: 100%;
    perspective: 800px;
}

#card1 .face {
    background-image: linear-gradient( 135deg, #5EFCE8 10%, #736EFE 100%);
}

#card2 .face {
    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
}

#card3 .face {
    background-image: linear-gradient(60deg, #abecd6 0%, #fbed96 100%);
}

#card4 .face {
    background: linear-gradient(-180deg, #BCC5CE 0%, #929EAD 98%), 
    radial-gradient(at top left, rgba(255,255,255,0.30) 0%, 
    rgba(0,0,0,0.30) 100%);
    background-blend-mode: screen;
}

.card-container .card {
    width: 100%;
    height: 100%;
    position: relative;
    transition: transform 1000ms;
    transform-style: preserve-3d;
    cursor: pointer;
}

.card.is-flipped { 
    transform: rotateY(180deg);
}

.face, .content {
    box-sizing: border-box;
    width: 100%;
    height: 100%;
    border-radius: 2rem;
    box-shadow: 0 0 5px 2px rgba(50, 50, 50, 0.25);
    position: absolute;
    backface-visibility: hidden;
} 

.face {
    font-size: 20px;
    text-align: center;
    padding: 10%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.content {
    font-size: 17px;
    font-weight: 500;
    background-color: #D3D3D3;
    transform: rotateY(180deg);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5rem;
    line-height: 1.5;
    padding: 10%;
}

.page4 {
    background: linear-gradient(to right, #396afc, #2948ff);
    position: sticky;
    top: 0;
    display: flex;
    height: 100vh;
}

.page4 .section-title {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    font-size: 22px;
    color: white;
}

.page4 .contact-container {
    background-color: white;
    border-radius: 25px;
    display: flex;
    flex-direction: column;
    position: relative;
    align-items: center;
    top: 50%;
    transform: translateY(-50%);
    margin-left: 12.5vw;
    width: 30vw;
    max-width: 100%;
    min-height: 60vh;
    height: 70vh;
    padding-bottom: 1%;
    justify-content: space-evenly;
    overflow-y: auto;
}

.page4 .contact-container .contact-form {
    display: flex;
    flex-direction: column;
    width: 90%;
}

.page4 .contact-container .contact-title {
    position: relative;
    top: 0;
    font-size: 30px;
    margin-top: -2%;
}

.page4 .contact-container .contact-title hr {
    margin-top: -10%;
    width: 75%;
    border: 3px solid #396afc;
    border-radius: 10px;
}

input[type=text], input[type=email] {
    padding: 2%;
    font-size: 18px;
    margin-bottom: 3%;  
    border: 2px solid darkgray; 
    outline: none;
    transition: 0.5s;
}

label[for=name], label[for=email], label[for=message] {
    margin-bottom: 1%;
    font-weight: 500;
    font-size: 20px;
}

textarea {
    font-family: 'Inter', sans-serif;
    padding: 2%;
    font-size: 18px;
    border: 2px solid lightgray; 
    outline: none;
    transition: 0.5s;
    resize: none;
}

input[type=text]:focus, 
input[type=email]:focus,
textarea:focus {
    border: 2px solid black; 
}

.page4 .button {
    border: 2px solid lightgray; 
    cursor: pointer;
    margin-top: 3.5%;
    align-self: center;
    width: 25%;
    padding: 2% 4%;
    font-size: 16px;
    background-color: white;
    transition: 0.5s;
}   

.page4 .button:hover {
    border: 2px solid black; 
    background-color: #396afc;
    color: white;
    box-shadow: 4px 4px 4px #396afc;
}

.page4 .link-container {
    position: relative;
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    justify-content: center;
    width: 30vw;
    max-width: 100%;
    max-height: 50vh;
    min-height: 20vh;
    top: 50%;
    left: 15%;
    transform: translateY(-50%);
}

.page4 .link-container img {
    max-width:100%;
    max-height:100%;
}

.page4 .link-container .meme {
    object-fit: contain;
}

.page4 .link-container .links {
    background-color: white;
    border-radius: 25px;
    display: flex;
    width: 80%;
    align-items: center;
    justify-content: space-evenly;
    font-size: 20px;
    margin-top: 5%;
}

.page4 .ending-text {
    position: absolute;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
}

.page4 .copyright {
    position: absolute;
    bottom: 0;
    right: 1%;
}

